--- a/Plandit.csproj
+++ b/Plandit.csproj
@@ -12,7 +12,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 
 		<!-- Display name -->
-		<ApplicationTitle>Plandit</ApplicationTitle>
+		<ApplicationTitle>Plandit - ExoWeb Project Planner</ApplicationTitle>
 
 		<!-- App Identifier -->
 		<ApplicationId>com.companyname.plandit</ApplicationId>
@@ -51,6 +51,9 @@
 	<ItemGroup>
 	  <None Remove="Resources\Fonts\Montserrat-Regular.ttf" />
 	  <None Remove="Resources\Fonts\NotoSans-Regular.ttf" />
+	  <None Remove="Resources\Images\document.svg" />
+	  <None Remove="Resources\Images\home.svg" />
+	  <None Remove="Resources\Images\note.svg" />
 	</ItemGroup>
 
 	<ItemGroup>
