--- a/Plandit.csproj
+++ b/Plandit.csproj
@@ -60,4 +60,8 @@
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Core\" />
+	</ItemGroup>
+
 </Project>
