--- a/Plandit.csproj
+++ b/Plandit.csproj
@@ -56,6 +56,8 @@
 	  <None Remove="Resources\Images\document.svg" />
 	  <None Remove="Resources\Images\home.svg" />
 	  <None Remove="Resources\Images\note.svg" />
+	  <None Remove="Resources\Images\plus.svg" />
+	  <None Remove="Resources\Images\tick.svg" />
 	</ItemGroup>
 
 	<ItemGroup>
